# hamster-mcp

./: .gitignore  .lychee.toml  .markdownlint-cli2.yaml  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  README.md  codecov.yml  conftest.py  mise.toml  opencode.json  pyproject.toml  renovate.json5
.github/workflows/: ci.yml  reflow-post-release.yml  reflow-pre-commit.yml  reflow-publish-release.yml  reflow-python.yml  reflow-tag-release.yml  release.yml  renovate.yml  validate.yml
.opencode/: delegate_sysprompt.md
brand/: generate.py
custom_components/hamster/: __init__.py  config_flow.py  manifest.json
custom_components/hamster/translations/: en.json
custom_components/hamster_mcp/: __init__.py  button.py  config_flow.py  manifest.json  services.yaml
docs/: mkdocs.yml
docs/src/: index.md
docs/src/project/: architecture.md  data-flow.md  decisions.md  development.md  implementation-plan.md  index.md  mcp-protocol.md  open-questions.md  principles.md  release.md  tool-generation.md
scripts/: release.py
src/hamster/component/: __init__.py  config_flow.py  const.py  http.py
src/hamster/component/_tests/: conftest.py  test_config_flow.py  test_effect_handler.py  test_group_registry_component.py  test_hass_effects.py  test_http.py  test_init.py  test_multi_source_integration.py  test_shim.py  test_supervisor_unavailable.py
src/hamster/mcp/_core/: docs_enrichment.py  events.py  jsonrpc.py  session.py  tools.py  types.py
src/hamster/mcp/_core/resources/: __init__.py
src/hamster/mcp/_core/resources/insights/: entity-ids.md  index.md  selectors.md
src/hamster/mcp/_io/: aiohttp.py  resources.py
src/hamster/mcp/_tests/: test_aiohttp.py  test_docs_enrichment.py  test_events.py  test_jsonrpc.py  test_resources.py  test_session.py  test_tools.py  test_types.py
src/hamster_mcp/: __init__.py
src/hamster_mcp/component/: __init__.py  _runtime.py  button.py  config_flow.py  const.py  http.py
src/hamster_mcp/component/_tests/: __init__.py  conftest.py  test_config_flow.py  test_effect_handler.py  test_group_registry_component.py  test_hass_effects.py  test_http.py  test_init.py  test_multi_source_integration.py  test_shim.py  test_supervisor_unavailable.py
src/hamster_mcp/mcp/: __init__.py
src/hamster_mcp/mcp/_core/: __init__.py  events.py  groups.py  hass_group.py  jsonrpc.py  registry_enrichment.py  selector_schemas.py  session.py  supervisor_group.py  tools.py  types.py
src/hamster_mcp/mcp/_core/resources/: __init__.py
src/hamster_mcp/mcp/_core/resources/insights/: entity-ids.md  entity-state-exploration.md  index.md  log-sources.md  reading-configurations.md  selectors.md  service-targeting.md  services-and-hass.md
src/hamster_mcp/mcp/_io/: __init__.py  aiohttp.py  resources.py
src/hamster_mcp/mcp/_tests/: __init__.py  test_aiohttp.py  test_docs_enrichment.py  test_events.py  test_groups.py  test_hass_group.py  test_jsonrpc.py  test_placeholder.py  test_registry_enrichment.py  test_resources.py  test_selector_schemas.py  test_session.py  test_supervisor_group.py  test_tools.py  test_types.py
